# LogiRisk-ML

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
app/: main.py  schemas.py  ui.py
mlartifacts/129965669047762252/models/m-c0c5fd8c7aac4d10b8453f90a414dbf7/artifacts/: MLmodel  conda.yaml  input_example.json  requirements.txt
mlartifacts/159577230137503399/032117f7bf0345999f643b170d1fb03d/artifacts/: estimator.html
mlartifacts/159577230137503399/models/m-fb11dbec25aa49cb82a1d34a3c79c4ee/artifacts/: MLmodel  serving_input_example.json
mlartifacts/339193540953218807/models/m-d34ff4e90f8f4fb8a7fcb21090c661cc/artifacts/: MLmodel  conda.yaml  input_example.json  model.pkl
mlartifacts/946902816506478657/models/m-6f0ee5ff29be41c691c77430abbef1fd/artifacts/: MLmodel  serving_input_example.json
mlartifacts/988763783083133533/models/m-88d424c33f4f4993ab7b4ca1d7f86363/artifacts/: MLmodel  input_example.json  requirements.txt  serving_input_example.json
models/: ordinal_encoder_v1.joblib  target_encoder_v1.joblib
notebooks/: 01_EDA.ipynb
src/: predict.py  preprocess.py  train.py
